# react-native-desktop

./: CMakeLists.txt  package.json
.circleci/: config.yml
Examples/: Example.qml.in
Examples/TicTacToe/: TicTacToeApp.js
ExternalTestModule/: CMakeLists.txt  externaltestmodule.cpp  externaltestmodule.h
ExternalTestModule2/: CMakeLists.txt  externaltestmodule2.cpp  externaltestmodule2.h
Libraries/Interaction/__tests__/: InteractionManager-test.js
Libraries/Network/: XMLHttpRequest.js
Libraries/ReactNative/: AppRegistry.js
RNTester/js/: ListViewExample.js  RNTesterApp.desktop.js  RNTesterList.desktop.js
ReactCommon/cxxreact/: JSCExecutor.cpp  ModuleRegistry.cpp
ReactCommon/jschelpers/: JSCWrapper.h  systemJSCWrapper.cpp
ReactQt/application/src/: CMakeLists.txt  main.cpp  main.qml  main.qml.in  main.qrc
ReactQt/runtime/src/: CMakeLists.txt  bridge.cpp  bridge.h  modulemethod.cpp  networking.cpp  networking.h  pipeexecutor.cpp  reactbridge.cpp  reactslider.cpp  reactslider.h  reactslidermanager.cpp  reactslidermanager.h  rootview.cpp  sourcecode.cpp  utilities.cpp  utilities.h  websocketmodule.cpp  websocketmodule.h
ReactQt/runtime/src/communication/: executor.cpp  executor.h  iexecutor.h  javascriptcoreexecutor.h
ReactQt/runtime/src/componentmanagers/: imageloader.cpp
ReactQt/runtime/src/qml/: ReactNavigator.qml  ReactSlider.qml
ReactQt/tests/: reactpropertytestcase.cpp  reacttestcase.cpp  reacttestcase.h  test-button-props.cpp  test-image-props.cpp  test-slider-props.cpp
ReactQt/tests/JS/: TestSliderProps.js
local-cli/desktop/: buildDesktop.js
local-cli/generator-desktop/templates/: CMakeLists.txt
local-cli/ubuntu/: genUbuntu.js  runUbuntu.js  ubuntu.js
